fix alignment on color by and group by text

--- a/src/containers/ColorByMenu/style.css
+++ b/src/containers/ColorByMenu/style.css
@@ -2,6 +2,7 @@
 
 .feature-select-row {
   margin-bottom: 1em;
+  align-items: center;
 }
 
 :global(.ant-select.ant-select-enabled) {
